Fix uuid vulnerability by overriding transitive uuid to patched 11.1.1
